Incluindo novas funcionalidades,

--- a/WebReact/appsettings.json
+++ b/WebReact/appsettings.json
@@ -1,14 +1,13 @@
 {
 
-    "ConnectionStrings": {
-      "DefaultConnections": "User ID=postgres;Password=300904;Host=localhost;Port=5432;Database=_Produtos"
-    },
+  "ConnectionStrings": {
+    "DefaultConnections": "Server=DESKTOP-63LD54P\\SQLEXPRESS;Database=teste;Trusted_Connection=True;"
+  },
     "Logging": {
       "LogLevel": {
         "Default": "Warning"
       }
     },
     "AllowedHosts": "*"
-
 
   }
